# shaderunner

./: Cargo.toml  README.md  changelog.md
examples/: example.rs
src/: color_normal_vertex.rs  color_vertex.rs  example.rs  game_program.rs  handle.rs  lib.rs  line_shader.wgsl  main.rs  mesh.rs  renderer.rs  scene.rs  shader.wgsl  test_assets.rs  ui_manager.rs  window.rs
src/renderer/: create_pipeline.rs  gpu_resources.rs  instances.rs  line_renderer.rs  pipeline.rs  resizable_buffer.rs  resources.rs  texture.rs
src/renderer/resources/: arena_iterator.rs  instance.rs  instance_list.rs  many_one.rs  mesh.rs  misc.rs  pipeline.rs  uniforms.rs
src/scene/: camera.rs  light.rs
src/window/: game_loop.rs  timing_stats.rs
